Update LinkedIn Link

--- a/My Portfolio Page/My Restaurant/index.html
+++ b/My Portfolio Page/My Restaurant/index.html
@@ -82,7 +82,7 @@
         <p>Yuanyou 'Tony' Yao</p>
       </div>
       <div>
-        <a href ="https://www.linkedin.com/in/yuanyou-yao-050635210/"><img class = "bi" src = "https://cdn.glitch.global/3d43383c-3e24-48ef-8ec0-3721cacc36f9/In-White-128%402x.png?v=1697501502526" alt = "LinkedIn Logo Link"/></a>
+        <a href ="https://www.linkedin.com/in/yaoyuanyou/"><img class = "bi" src = "https://cdn.glitch.global/3d43383c-3e24-48ef-8ec0-3721cacc36f9/In-White-128%402x.png?v=1697501502526" alt = "LinkedIn Logo Link"/></a>
         <a href ="https://github.com/yaoyuanyou"><img class = "bi" src= "https://cdn.glitch.global/3d43383c-3e24-48ef-8ec0-3721cacc36f9/github-mark-white.png?v=1697501359807" alt = "GitHub Logo Link"/></a>
         <a href ="https://glitch.com/@yaoyuanyou"><img class = "bi" src= "https://cdn.glitch.global/3d43383c-3e24-48ef-8ec0-3721cacc36f9/images.png?v=1697500756003" alt = "Glitch Logo Link"/></a>
       </div>
